redireccion del home

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="header">
         <header>
             <span class="image avatar"><img src="./images/perfil.png" alt="" /></span>
-            <h1 id="logo"><a href="/">Agustin Mattar</a></h1>
+            <h1 id="logo"><a href="https://aguchomattar.github.io/portafolio/">Agustin Mattar</a></h1>
             <p>Web developer<br />
             </p>
         </header>
