redireccion del submit modificadaa

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 </div>
                                 <ul class="actions">
                                     <li><button class="button" type="submit">Enviar Mensaje</button></li>
-                                    <input type="hidden" name="_next" value="https://aguchomattar.github.io/portafolio/index.html">
+                                    <input type="hidden" name="_next" value="https://aguchomattar.github.io/portafolio/">
                                     <input type="hidden" name="_captcha" value="false">
                                     <input type="hidden" name="_template" value="table">
 
