--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </div>
                         </article>
                         <article>
-                            <a href="https://bienes-raices2021.netlify.app/" class="image"><img src="./images/bienes-raices.jpg" alt="" width="90" height="200" /></a>
+                            <a href="https://bienes-raices2021.netlify.app/" target="_blank" class="image"><img src="./images/bienes-raices.jpg" alt="" width="90" height="200" /></a>
                             <div class="inner">
                                 <h4>Bienes Raices</h4>
                                 <p>Este es un proyecto personal, en el cual aplico y refuerzo mis conocieminetos en HTML y CSS.</p>
