--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html>
 
@@ -6,54 +6,53 @@
     <title>Agustin Mattar - Portafolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="images/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="manifest" href="images/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="images/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png" />
+    <link rel="manifest" href="images/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <script src="https://kit.fontawesome.com/1fa0a94eb8.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="is-preload">
-
     <!-- Header -->
     <section id="header">
         <header>
-            <span class="image avatar"><img src="./images/perfil.png" alt="" /></span>
-            <h1 id="logo"><a href="https://aguchomattar.github.io/portafolio/">Agustin Mattar</a></h1>
-            <p>Web developer<br />
-            </p>
-        </header>
-        <nav id="nav">
-            <ul>
-                <li><a href="#one" class="active">Acerca de mi</a></li>
+            <span class="image avatar"><img src="./images/perfil.png" alt=""
+				/></span>
+            <h1 id="logo">
+                <a href="https://aguchomattar.github.io/portafolio/">Agustin Mattar</a
+					>
+				</h1>
+				<p>Web developer<br /></p>
+			</header>
+			<nav id="nav">
+				<ul>
+					<li><a href="#one" class="active">Acerca de mi</a></li>
                 <li><a href="#two">Mis habilidades</a></li>
                 <li><a href="#three">Mis proyectos</a></li>
                 <li><a href="#four">Dejame un mensaje</a></li>
-            </ul>
-        </nav>
-
+                </ul>
+                </nav>
     </section>
 
     <!-- Wrapper -->
     <div id="wrapper">
-
         <!-- Main -->
         <div id="main">
-
             <!-- One -->
             <section id="one">
                 <div class="image main" data-position="center">
@@ -62,10 +61,11 @@
                 <div class="container">
                     <header class="major">
                         <h2>Hola! mi nombre es Agustin</h2>
-                        <p>Formación autodidacta en relacion con el Desarrollo, Diseño y Programación web. En constante crecimiento y capacitación tanto en Front-End como Back-End, dispuesto siempre a conocer y aprender nuevas tecnologías que me permitan
-                            seguir desarrollandome como profesional en el área IT.</p>
+                        <p>
+                            Formación autodidacta en relacion con el Desarrollo, Diseño y Programación web. En constante crecimiento y capacitación tanto en Front-End como Back-End, dispuesto siempre a conocer y aprender nuevas tecnologías que me permitan seguir desarrollandome
+                            como profesional en el área IT.
+                        </p>
                     </header>
-
                 </div>
             </section>
 
@@ -73,7 +73,9 @@
             <section id="two">
                 <div class="container">
                     <h3>Sobre mis habilidades y conocimientos</h3>
-                    <p>Estas son las tecnologias con las cuales trabajo y aprendo dia a dia.</p>
+                    <p>
+                        Estas son las tecnologias con las cuales trabajo y aprendo dia a dia.
+                    </p>
                     <ul class="feature-icons">
                         <li class="icons solid fab fa-html5">Html</li>
                         <li class="icons solid fab fa-css3">Css</li>
@@ -88,25 +90,28 @@
             <section id="three">
                 <div class="container">
                     <h3>Mis proyectos</h3>
-                    <p>Aqui quiero mostrate algunos de mis proyectos realizados y las tecnologias que utilice en cada uno.
+                    <p>
+                        Aqui quiero mostrate algunos de mis proyectos realizados y las tecnologias que utilice en cada uno.
                     </p>
                     <div class="features">
                         <article>
                             <a href="https://blog-cofe.netlify.app/" target="_blank" class="image"><img src="./images/blogcafe.jpg" alt="" /></a>
                             <div class="inner">
                                 <h4>Blog de Cafe</h4>
-                                <p>Este es un proyecto personal, en el cual aplico y refuerzo mis conocieminetos en HTML y CSS. </p>
-
+                                <p>
+                                    Este es un proyecto personal, en el cual aplico y refuerzo mis conocieminetos en HTML y CSS.
+                                </p>
                             </div>
                         </article>
                         <article>
                             <a href="https://bienes-raices2021.netlify.app/" target="_blank" class="image"><img src="./images/bienes-raices.jpg" alt="" width="90" height="200" /></a>
                             <div class="inner">
                                 <h4>Bienes Raices</h4>
-                                <p>Este es un proyecto personal, en el cual aplico y refuerzo mis conocieminetos en HTML y CSS.</p>
+                                <p>
+                                    Este es un proyecto personal, en el cual aplico y refuerzo mis conocieminetos en HTML y CSS.
+                                </p>
                             </div>
                         </article>
-
                     </div>
                 </div>
             </section>
@@ -122,11 +127,11 @@
                                 <div class="fields">
                                     <div class="field half">
                                         <label for="name">Nombre</label>
-                                        <input type="text" name="name" id="name" placeholder="Nombre" required/>
+                                        <input type="text" name="name" id="name" placeholder="Nombre" required />
                                     </div>
                                     <div class="field half">
                                         <label for="email">Email</label>
-                                        <input type="text" name="email" id="email" placeholder="Email" required/>
+                                        <input type="text" name="email" id="email" placeholder="Email" required />
                                     </div>
                                     <div class="field">
                                         <label for="message">Mensaje</label>
@@ -134,12 +139,14 @@
                                     </div>
                                 </div>
                                 <ul class="actions">
-                                    <li><button class="button" type="submit">Enviar Mensaje</button></li>
-                                    <input type="hidden" name="_next" value="https://aguchomattar.github.io/portafolio/">
-                                    <input type="hidden" name="_captcha" value="false">
-                                    <input type="hidden" name="_template" value="table">
-
-
+                                    <li>
+                                        <button class="button" type="submit">
+												Enviar Mensaje
+											</button>
+                                    </li>
+                                    <input type="hidden" name="_next" value="https://aguchomattar.github.io/portafolio/" />
+                                    <input type="hidden" name="_captcha" value="false" />
+                                    <input type="hidden" name="_template" value="table" />
                                 </ul>
                             </form>
                         </section>
@@ -149,8 +156,8 @@
                                 <li>
                                     <h3>Direccion</h3>
                                     <span>Santiago del estero,<br />
-								Argentina<br />
-								</span>
+											Argentina<br />
+										</span>
                                 </li>
                                 <li>
                                     <h3>Correo electronico</h3>
@@ -158,51 +165,69 @@
                                 </li>
                                 <li>
                                     <h3>Telefono</h3>
-                                    <span class="fas fa-phone">  +54(385) 6983356</span>
+                                    <span class="fas fa-phone"> +54(385) 6983356</span>
                                 </li>
                                 <li>
                                     <h3>Social</h3>
                                     <ul class="icons">
-                                        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                                        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                                        <li><a href="https://github.com/aguchomattar" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                                        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                                        <li><a href="https://www.linkedin.com/in/agustin-mattar/" target="_bank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </section>
-                    </div>
-                </div>
-            </section>
+                                        <li>
+                                            <a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a
+												>
+											</li>
+											<li>
+												<a href="#" class="icon brands fa-facebook-f"
+													><span class="label">Facebook</span></a
+												>
+											</li>
+											<li>
+												<a
+													href="https://github.com/aguchomattar"
+													target="_blank"
+													class="icon brands fa-github"
+													><span class="label">GitHub</span></a
+												>
+											</li>
+											<li>
+												<a href="#" class="icon brands fa-instagram"
+													><span class="label">Instagram</span></a
+												>
+											</li>
+											<li>
+												<a
+													href="https://www.linkedin.com/in/agustin-mattar/"
+													target="_bank"
+													class="icon brands fa-linkedin-in"
+													><span class="label">LinkedIn</span></a
+												>
+											</li>
+										</ul>
+									</li>
+								</ul>
+							</section>
+						</div>
+					</div>
+				</section>
+			</div>
 
+			<!-- Footer -->
+			<section id="footer">
+				<div class="container">
+					<ul class="copyright">
+						<li>
+							&copy; 2022 - Agustin Mattar. Todos los derechos reservados.
+						</li>
+					</ul>
+				</div>
+			</section>
+		</div>
 
-
-
-
-        </div>
-
-        <!-- Footer -->
-        <section id="footer">
-            <div class="container">
-                <ul class="copyright">
-                    <li>&copy; 2022 - Agustin Mattar. Todos los derechos reservados.</li>
-
-                </ul>
-            </div>
-        </section>
-
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-
-</body>
-
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+	</body>
 </html>
